[tool.poetry]
name = "gha-pinner"
version = "0.1.6"
description = "Pin GitHub Actions to specific commit SHAs for improved security"
authors = ["Samuele Pasini <sapa@bendingspoons.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/sapasapasapa/gha-pinner"
keywords = ["github", "actions", "security", "pin", "sha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.16.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.12.4"

[tool.poetry.scripts]
gha-pinner = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
